[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
authors = [
    { name = "David Pickup" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aoc2024 = "aoc2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
